docs: fix stale claims, document agent gotchas, add native binary provenance
- README/DEVELOPMENT: correct version badge (2.6.0 -> 2.10.3), drop remaining 'fastest'
  superlatives (point to PERFORMANCE-LESSONS), fix forest count 17 -> 19 and add the two
  missing BlockedIlpDfs rows to the variant table, note OptimizingFlatBinaryForest is built
  directly (not a ForestType).
- CLAUDE.md: add a 'Gotchas (this repo)' section (hidden test stdout, java22 classpath
  precedence, -PjmhArgs whitespace splitting, global JMH lock, -D not forwarded to tests,
  blocked perf) so future agents don't rediscover them.
- native/BINARIES.md: sha256/md5/size + rebuild commit/date + build flags for the committed
  .so/.dll, with a 'refresh on rebuild' convention.